--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openai": "^3.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
   }
