--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.13.0",
     "tailwindcss": "3.3.2"
   }
 }
